[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rstcheck]
report_level = "WARNING"
ignore_directives = ["autoclass", "autofunction"]

[tool.pytest.ini_options]
# addopts = ["--import-mode=importlib",]
markers = ['codec', 'ext', 'path',]

[project]
name = "imggen"
version = "0.1.3"
authors = [
  { name="Paul J. Iutzi", email="pji@mac.com" },
]
description = "Procedural image data creation."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'opencv-python',
]

[project.urls]
"Homepage" = "https://github.com/pji/imggen"
"Bug Tracker" = "https://github.com/pji/imggen/issues"
